--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.0",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
+    "phosphor-react": "^1.4.1",
     "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
